# heitor_test_crew_dev

./: README.md  pyproject.toml
src/heitor_test_crew_dev/: crew.py  main.py
